dts/testData/inspections/container/NodeV1.dts
/ {
    <error descr="Not a valid node entry">/dts-v1/</error>;
};